Se quitaron algunas frases redundantes, se ampliaron algunos parrafos, se estructuraron mejor algunos parrafos. Falta hacer correccion de ortografia y jerarquizacion con titulos

--- a/Escritos/001.md
+++ b/Escritos/001.md
@@ -2,31 +2,33 @@
 
 ## Introducción 
 
-Quiero advertir al lector que este no sera un artículo cientifico, ni una entrada de algún medio sensacionalista para llenar su cuota semanal de artículos. Esto mas que algún tipo de artículo puede ser pensado mas como un ensayo. Y en algún punto mas que ensayo puede ser pensado como terapia o desahogo. Así querido lector no te desanimes si tal vez no escribo el último avanze de la ciencia que cambie tu vida o si no cumplo con tus expectativas de morbo. Esto mas bien son mis razones personales para escribir. 
+Quiero advertir al lector que este no sera un artículo cientifico, ni una entrada de algún medio sensacionalista para llenar su cuota semanal de artículos. Esto mas que algún tipo de artículo puede ser pensado mas como un ensayo. Y en algún punto mas que ensayo puede ser pensado como terapia o desahogo. Así querido lector no te desanimes si tal vez no escribo el último avanze de la ciencia que cambie tu vida o si no cumplo con tus expectativas de morbo. En este escrito quiiero plasmar mis razones personales para escribir. 
 
 ## Ahora bien ¿por qué escribir? 
 
-Ahora si entrando en cuestión ¿Por qué escribir? En mi caso debería hacer una pregunta distinta, ya que esta pregunta suena a que voy a dar algún tipo de respuesta para motivar a otros a escribir o que voy a dar las bondades de esta actividad, como cuando las personas listan las bondades de la última planta que les hace bajar de peso. No mas bien debería hacer otra pregunta ¿Que me motivo a escribir? 
+Ahora si entrando en cuestión ¿Por qué escribir? En mi caso debería hacer una pregunta distinta, ya que esta pregunta suena a que voy a dar algún tipo de respuesta para motivar a otros a escribir o que voy a dar las bondades de esta actividad, como cuando alguien lista las bondades de la última planta que les hace bajar de peso y esa no es mi finalidad. Mas bien debería plantear otra pregunta ¿Que me motivo a escribir? 
 
-Bien esta pregunta me parece mucho mejor. Escribo para poder ejercer mi libertad. Escribo para poder expresarme. Escribo para intentar mostrar mis intereses y honestos sentimientos al mundo ¿Te parecen pocos motivos para escribir?   ¿O siempre has podido expresarte de manera libre y esto te parece tonto? ¿Acaso en nuestros estados occidentales no existe el derecho a la libre expresión? 
+Bien esta pregunta me parece mucho mejor. Escribo para poder ejercer mi libertad. Escribo para poder expresarme. Escribo para intentar exhibir las cosas que me interesan y mostrar mis mas honestos sentimientos al mundo ¿Te parecen pocos motivos para escribir?  ¿O siempre has podido expresarte de manera libre y esto te parece tonto? ¿Y es que a caso no existe la libre expresión? 
 
-Hablaré de mi caso particular y no, me parece que pocas veces he tenido la libertad para poder expresarme libremente. Tal vez porque tengo unas ganas increíbles de ver el mundo tal cual es y no lo que quiero que sea. Yo se que esto es imposible porque de las cosas que prestamos atención en algun momento dejaran hechos para volverse una interpretación. Se vuelve una interpretación porque pegamos esos hechos a nuestras memorias y esas memorias para mantenerse vivas se unen en historias donde vamos uniendo lo que vemos. 
+Y claro que existe la libre expresión. Pero que exista la libre expresión y que lo que expreses sea recibido de buena manera son dos cosas distintas. Hablaré de mi caso particular y no siento que haya tenido la libertad para poder expresarme libremente. Porque tengo ganas de entender el mundo aún cuando muchas veces las cosas no son lo que me gustaría que fuera o lo que yo esperaba. Y creo que a muchas personas no les gusta esta actitud ya que prefieren la seguridad que el status quo brinda o prefieren agarrarse hasta el último momento de las creencias que ya tienen y no se atreven a abandonarlas. 
 
-¿Y esto que tiene que ver con expresarse libremente? Bueno en mi caso muchas veces he tenido que dejar de expresarme por el temor a que me vayan a responder con agresividad o que mi opinión no va a ser bien recibida. Porque cuando dices que va en contra de los valores convencionales no es bien recibido. Y cuanto vives en un lugar como latinoamerica o Colombia ves que llevar la contraria o hacer algo milimetricamente diferente parece despertar la agresividad mas profunda, como si estuvieramos quitandoles algo extremadamente valioso. Así que cuando estas en un lugar con estos rasgos se te quitan las ganas de expresarte libremente.
+¡Tengo unas ganas increíbles de ver el mundo tal cual es y no lo que quiero que sea!  Yo se que ver el mundo sin filtros es imposible porque cuando interpretamos algo los hechos se vuelven irrelevantes y solo queda esa lectura que nos formamos. Despues esta interpretación se pega a nuestras memorias y esas memorias para mantenerse vivas se unen en historias donde vamos condensando nuestra experiencia. 
 
-[Mirar si agregar o borrar] Esta es una concepción muy juvenil que con el tiempo me he dado cuenta que es mentira. En el ejercicio de nuestra libertad de expresarnos podemos herir a alguien. Sin embargo la manera en como las personas lidían con eso que no les gustón 
+¿Y esto que tiene que ver intentar ver el mundo tal cual es con expresarse libremente? Bueno en mi caso muchas veces he prefierido callar por el temor a que me vayan a responder con agresividad, que mi opinión no va a ser bien recibida o por no querer recibir atención. Y es que pocas veces destacar o recibir la atención lo he sentido como algo agradable. Lamentablemente cada vez que llamaba la atención era para que alguien destacara mis defectos ¿Por qué deliberadamente destacamos las cosas malas sobre las buenas? ¿Este fallo de la mente humana no te parece perverso? 
 
-Y la verdad es que he guardado silencio por mucho tiempo. He vivido gran parte de mi vida intentando no incomodar a nadie. Porque no hay ningún superheroe que cuando las cosas se pongan feas me va a venir a salvar. Tal vez por eso las películas de superheroes son tan populares o los mitos son tan potentes. Es reconfortable la idea de que aunque todo salga mal algún tipo de fuerza miteriosa te va a venir a salvar. En mi caso cuando estaba joven era consciente de que cuando alguien fuera agresivo contra mi, nadie iba a venir a salvame. Así que en vez de correr el riesgo decidí guardar silencio. 
+Y en esta situación donde destacar se convierte en un carga y en donde no te sientes a gusto con la comunidad que te rodea ¿Merece la pena compartir lo que piensas? Porque pareciera que cuando te sales aunque sea nanometricamente de lo normal se genera un gran revuelo. No puedes ser un poco mas empatico que los demas porque te tildan de debil o sentimental. No puedes ser un poco mas inteligente que los demas porque te tildan de ser un genio que sabe todas las respuestas. No puedes tener ser un poco mas bajo que los demas porque te tildan de enano. Y es que pareciera que las personas quiseran generar un centro de gravedad que te atrae a la "normalidad". ¿Tal vez porque queremos que "todos seamos iguales"? Y una vez que todos seamos iguales ¿Que pasará? ¿Todos podrán tener la mismas oportunidades de estar igualmente insatisfechos? ¿Qué todos empezemos en un mismo punto garantizará que alguien no va a destacar?
 
-Y viendolo con los ojos que tengo actualmente pienso cuales son las consecuencias de esto. Es decir el hecho de guardar silencio tambien me lleva a que tengo que ocultarme ciertas cosas a mi mismo tambien. Como el hecho de suprimir mi identidad para intentar no llamar mucho la atención y encajar en la "norma". Tal vez fuí lanzado a la maquina de moler y convertirme en una salchicha como en la canción de Pink Floyd. Aunque en mi caso tal vez lo mas cruel es que la persona encargada de operar la maquina, lanzarme al vacío y empacar soy yo mismo. Soy juez, jurado y vedugo de mi mismo. Porque ¿Para qué hablar en contra de los valores tradicionales? ¿Para qué mostrar la hipocrecia de las personas que participan en la sociedad? ¿Para qué mostrar la doble moral de la sociedad? 
+¿Y si destacar molesta a alguien mas deberíamos parar? Mi yo mas joven pensaría que si. Con el tiempo me he dado cuenta que eso no es cierto. No debemos fijarnos en los sentimientos de las personas que estan asustadas por sentirse inferiores. Porque la causa de este sentimiento son sus sensaciones internas, que intentan explicar con las cosas que pasan a su alrededor. Sin embargo la manera como ellos lidian con sus sensaciones internas no es nuestra responsabilidad.
 
-Digo si finalmente las opiniones, juicios y comportamientos de las otras personas estan fuera de nuestro control. Y aunque podemos influir en lo que ellas hacen. Realmente es muy poco lo que podemos hacer ¿Y si nosotros pudieramos hacer que los demas se comportaran como nostros deseamos? ¿Qué nos hace pensar que es bueno para ellos mismos, para nosotros y para los otros? ¿Qué nos hace creer que nuestro juicio es adecuado para decir a otros que hacer? ¿Qué nos hace creer que nuestros valores son adecuados para que otro los deba usar? Parece que en este mundo todos quieren imponer su juicio y que se hagan las cosas del modo que ellos quieren. Pero ¿Qué les hace pensar que las cosas deben hacerse de ese modo? ¿Cómo estan tan seguros de que su criterio es tan bueno? 
+Y la verdad es que he guardado silencio por mucho tiempo. Porque es difícil lidiar con el momento en que las cosas se ponen feas y no parciera que no hubiera nada ni nadie que te venga a salvar. Tal vez por eso las películas de superheroes son tan populares o los mitos son tan potentes. Es reconfortable la idea de que aunque todo salga mal algún tipo de fuerza miteriosa te va a venir a salvar. Pero la verdad es que en todas las situaciones existen infinidad de alternativas, solo que no las tomamos muchas veces porque cerramos rápidamente porque no es la solución convencioanl. Queremos encontrar una alternativa entre todo lo que se parece, y pensando que entre todo lo parecido los resultados van a ser distintos. 
 
-Y estas preguntas las traigo a colación porque los lugares donde he transitado pareciera que todo el mundo andará con un manual de instrucciones que no me han dado. Y todo el mundo pareciera que quisiera controlar la manera en la que luzco, la manera en que me comporto o la manera que debería pensar como si ellos supieran que debería hacer. ¿Y es que ellos como lo saben? Tal vez en su cabeza piensan que si todo el mundo es de una misma manera entonces el mundo será mejor y si es así ¿Quién debe ser el que determina lo que se debe hacer y lo que no? Porque hemos visto muchísimas veces como esto falla como cuando los españoles dijeron que las únicas personas dignas de ocupar tierras americanas eran ellos. O como cuando los Estados Unidos dijeron que todos eran considerados iguales ante la ley pero todavía habían esclavos. Y esto puede continuar y continuar. 
+¿Y cuales son las consecuencias de guardar silencio? Una de las perores consecuencias es suprimir tu identidad para intentar no llamar mucho la atención y encajar en la "norma". Tal vez fuí lanzado a la maquina de moler y convertirme en una salchicha como en la canción de Pink Floyd. Aunque en mi caso tal vez lo mas cruel es que la persona encargada de operar la maquina, lanzarme al vacío y empacarme soy yo. Soy juez, jurado y vedugo de mi mismo. Porque ¿Para qué ir en contra de los valores tradicionales? ¿Para qué cuestionarse las actitudes con los cuales nuestra cultura vive? 
 
-Así que ¿Quién tiene razón de como debo vestir, lucir o actuar? Pues lamentablemente para todos aquellos que les gusta que todo sea a su manera, solamente yo. Así que escribo para dejar de esconderme. Escribo porque las opiniones, reacciones y juicios de otros no me pertenecen. No tengo que apropiarme del rechazo que otras personas expresan. Escribo tambien para acostumbrarme a los comentarios agresivos y no dejarlos entrar en mi vida. **Y escribo sobre todo para mi, para validar, consolidar, valorar, apreciar lo que pienso. Y para dejar de guardar silencio, encontrar mi voz y hablar con libertad.**
+¿Y si estas personas puedieran tener su deseo de hacer que los demas se comportaran como ellos desean? ¿Qué nos hace pensar que lo que ellos desean es bueno para ellos mismos, para nosotros y para los otros? ¿Qué nos hace creer que su  juicio es adecuado para decir a otros que hacer? ¿Qué nos hace creer que sus valores son adecuados para que los demas los deban usar? ¿Y cuando todos los seres humanos sean unificados viviran la vida que desean? ¿O viviran el infierno de lo igual? 
 
+Y estas preguntas las traigo a colación porque los lugares donde he transitado pareciera que todo el mundo andará con un manual de instrucciones que no me han dado de lo que es correcto o incorrecto. Y todo el mundo pareciera que supiera la manera en la que debo lucir, la manera en que me debo comportar o la manera que debería pensar ¿Y cómos saben ellos lo que debo hacer?  En la cultura ejercida a traves de sus individuos pareciera que existiera un tipo de individuo al que todos debemos aspirar ¿Quién determina este prototipo? Porque a lo largo de la historia hemos visto que imponer un prototipo lo único que genera es barbarie, como cuando los españoles dijeron que el único prototipo de ocupar tierras americanas eran ellos. O como cuando los Estados Unidos dijeron que todos los que pertenecían a su prototipo considerados iguales ante la ley pero curiosamente los esclavos todavía existían porque no estaban considerados en ese prototipo. Y esto puede continuar y continuar. 
 
+Así que ¿Quién tiene razón de como debo vestir, lucir o actuar? Pues lamentablemente para todos aquellos que les gusta que todo sea a su manera, solamente yo. Así que escribo para dejar de esconderme. Escribo porque las opiniones, reacciones y juicios de otros no me pertenecen. No tengo que apropiarme del rechazo que otras personas expresan. Escribo para acabar con la idea de que solo existe un estilo de vida que merece ser vivida. Que existen miles de prototipos que merecen ser la pena ser contados y experimentados. Escribo tambien para acostumbrarme a los comentarios agresivos y no dejarlos entrar en mi vida. **Y escribo sobre todo para mi, para validar, consolidar, valorar, apreciar lo que pienso. Y para dejar de guardar silencio, encontrar mi voz y hablar con libertad.**
 
 
 
